# ss-core

./: .env  .gitignore  Dockerfile  README.md  compose.yaml  fly.toml  pyproject.toml  pytest.ini  requirements-dev.in  requirements-dev.txt  requirements.in  requirements.txt  sample.env
.github/workflows/: ci.yaml
app/: logging_config.yaml  main.py
app/auth/: dependencies.py  jwt.py  keycloak.py  models.py  realm-export.json
app/entities/: Contact.py  ExclusionCone.py  GeneralContact.py  GroundStation.py  RFTime.py  Request.py  Satellite.py  User.py  Visibility.py
app/models/: auth.py  exclusion_cone.py  ground_station.py  gs.py  mission.py  request.py  satellite.py  user.py
app/routers/: auth.py  error.py  exclusion_cone.py  ground_station.py  gs.py  gs_mock.py  hello.py  mission.py  request.py  satellite.py  station_sim.py  user.py
app/services/: auth.py  db.py  exclusion_cone.py  ground_station.py  gs.py  mission.py  permissions.py  request.py  satellite.py  station_sim.py  user.py
app/tests/: test_gs_mock.py  test_hello.py  test_mvp.py
docker/: Dockerfile  Dockerfile.dev  compose.yaml  keycloak.Dockerfile
docker/scripts/: init_keycloak_users.py
flaskr/: gs_mock.py  router.py
tests/: test_gs_mock.py  test_hello.py
tests/routers/: test_auth_router.py  test_ground_station_router.py  test_gs_mock_router.py  test_station_sim_router.py
tests/services/: test_ground_station_service.py  test_request_service.py  test_station_sim.py
