[project]
name = "starsync"
dependencies = [
  "fastapi",
  "uvicorn",
  "numpy",
  "pydantic"
]

[tool.pytest.ini_options]
testpaths = ["tests"]
log_cli_level = "INFO"
pythonpath = "."

[[tool.mypy.overrides]]
module = "skyfield.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "pygelf"
ignore_missing_imports = true
